include/wget/wget.h

// definition of error conditions
typedef enum {
	WGET_E_SUCCESS = 0, /* OK */
	WGET_E_UNKNOWN = -1, /* general error if nothing else appropriate */
	WGET_E_MEMORY = -2, /* memory allocation failure */
	WGET_E_INVALID = -3, /* invalid value to function */
	WGET_E_TIMEOUT = -4, /* timeout condition */
	WGET_E_CONNECT = -5, /* connect failure */
	WGET_E_HANDSHAKE = -6, /* general TLS handshake failure */
	WGET_E_CERTIFICATE = -7, /* general TLS certificate failure */
	WGET_E_TLS_DISABLED = -8, /* TLS was not enabled at compile time */
	WGET_E_XML_PARSE_ERR = -9, /* XML parsing failed */
	WGET_E_OPEN = -10, /* Failed to open file */
	WGET_E_IO = -11, /* General I/O error (read/write/stat/...) */
	WGET_E_UNSUPPORTED = -12, /* Unsupported function */
} wget_error;
typedef void wget_global_func(const char *, size_t);
/*
 * Logger routines
 */

typedef struct wget_logger_st wget_logger;
typedef void wget_logger_func(const char *buf , size_t len) WGET_GCC_NONNULL_ALL;
WGETAPI void
	wget_logger_set_func(wget_logger *logger, wget_logger_func *func);
WGETAPI void
	wget_logger_set_stream(wget_logger *logger, FILE *fp);
WGETAPI void
	wget_logger_set_file(wget_logger *logger, const char *fname);
WGETAPI wget_logger_func * NULLABLE
	wget_logger_get_func(wget_logger *logger) WGET_GCC_PURE;
WGETAPI FILE * NULLABLE
	wget_logger_get_stream(wget_logger *logger) WGET_GCC_PURE;
WGETAPI const char * NULLABLE
	wget_logger_get_file(wget_logger *logger) WGET_GCC_PURE;
WGETAPI void
	wget_error_printf(const char *__restrict fmt, ...) WGET_GCC_NONNULL((1)) WGET_GCC_PRINTF_FORMAT(1,2);
WGETAPI void WGET_GCC_NONNULL((1)) WGET_GCC_NORETURN WGET_GCC_PRINTF_FORMAT(1,2)
	wget_error_printf_exit(const char *__restrict fmt, ...);
WGETAPI wget_logger *
	wget_get_logger(int id) WGET_GCC_CONST;
typedef struct wget_thread_mutex_st *wget_thread_mutex;
WGETAPI int
	wget_thread_mutex_init(wget_thread_mutex *mutex);
WGETAPI int
	wget_thread_mutex_destroy(wget_thread_mutex *mutex);
WGETAPI void
	wget_thread_mutex_lock(wget_thread_mutex mutex);
WGETAPI void
	wget_thread_mutex_unlock(wget_thread_mutex mutex);
/*
 * Cookie routines
 */

// typedef for cookie database
typedef struct wget_cookie_db_st wget_cookie_db;
WGETAPI wget_cookie_db * NULLABLE
	wget_cookie_db_init(wget_cookie_db *cookie_db);
WGETAPI void
	wget_cookie_db_free(wget_cookie_db **cookie_db);
WGETAPI void
	wget_cookie_set_keep_session_cookies(wget_cookie_db *cookie_db, bool keep);
WGETAPI int
	wget_cookie_db_save(wget_cookie_db *cookie_db, const char *fname);
WGETAPI int
	wget_cookie_db_load(wget_cookie_db *cookie_db, const char *fname);
WGETAPI int
	wget_cookie_db_load_psl(wget_cookie_db *cookie_db, const char *fname);
/*
 * DNS caching routines
 */

typedef struct wget_dns_cache_st wget_dns_cache;
WGETAPI int
	wget_dns_cache_init(wget_dns_cache **cache);
WGETAPI void
	wget_dns_cache_free(wget_dns_cache **cache);
/*
 * DNS resolving routines
 */

typedef struct wget_dns_st wget_dns;
WGETAPI void
	wget_dns_set_cache(wget_dns *dns, wget_dns_cache *cache);
typedef struct wget_tcp_st wget_tcp;
WGETAPI int
	wget_net_init(void);
WGETAPI int
	wget_net_deinit(void);
WGETAPI void
	wget_tcp_set_tcp_fastopen(wget_tcp *tcp, bool tcp_fastopen);
WGETAPI int
	wget_tcp_get_family(wget_tcp *tcp) WGET_GCC_PURE;
WGETAPI int
	wget_tcp_get_preferred_family(wget_tcp *tcp) WGET_GCC_PURE;
WGETAPI void
	wget_tcp_set_family(wget_tcp *tcp, int family);
WGETAPI void
	wget_tcp_set_preferred_family(wget_tcp *tcp, int family);
WGETAPI void
	wget_tcp_set_bind_address(wget_tcp *tcp, const char *bind_address);
WGETAPI void
	wget_tcp_set_bind_interface(wget_tcp *tcp, const char *bind_interface);
WGETAPI void
	wget_ssl_deinit(void);
WGETAPI int
	wget_http_set_http_proxy(const char *proxy, const char *encoding);
WGETAPI int
	wget_http_set_https_proxy(const char *proxy, const char *encoding);
WGETAPI int
	wget_http_set_no_proxy(const char *no_proxy, const char *encoding);
WGETAPI void
	wget_http_init(void);
/*
 * random routines
 */

WGETAPI void
	wget_random_init(void);
WGETAPI int
	wget_console_init(void);
WGETAPI int
	wget_console_deinit(void);